fix: restructure menu

--- a/_pages/senkadagala-school.html
+++ b/_pages/senkadagala-school.html
@@ -1,7 +1,7 @@
 ---
-permalink: "the-school"
+permalink: "senkadagala-school"
 layout: page
-title: The School
+title: Senkadagala School
 ---
 
 <div class="pure-g heavy-top-margin">
@@ -14,7 +14,7 @@ title: The School
   <div class="pure-u-md-1-24"></div>
 
   <div class="pure-u-1 pure-u-md-1-2 medium-bottom-margin">
-    <img class="pure-u-1" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
+    <img class="pure-u-1" src="{{ 'assets/img/senkadagala-school-1.jpg' | relative_url }}" alt="TODO">
   </div>
 
   <div class="pure-u-1">
@@ -22,7 +22,7 @@ title: The School
   </div>
 </div>
 
-<img class="pure-u-1 pure-u-md-1-2 float-left medium-vertical-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
+<img class="pure-u-1 pure-u-md-1-2 float-left medium-vertical-margin medium-right-margin" src="{{ 'assets/img/senkadagala-school-2.jpg' | relative_url }}" alt="TODO">
 
 <p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
