fix: names & typos

--- a/_pages/projects/2019-workshops.html
+++ b/_pages/projects/2019-workshops.html
@@ -1,7 +1,7 @@
 ---
-permalink: "2019"
+permalink: "2019-workshops"
 layout: page
-title: January - February 2019
+title: The 2019 Workshops
 ---
 
 <p>In 2019 our Sri Lanka adventure keeps on going! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
@@ -35,7 +35,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-1.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-1.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -45,7 +45,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-2.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-2.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -73,7 +73,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-3.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-3.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -83,7 +83,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-4.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-4.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -94,7 +94,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-5.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-5.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -104,7 +104,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-6.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-6.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -116,7 +116,7 @@ title: January - February 2019
   <img
   alt="TODO"
   class="pure-u-1"
-  src="{{ 'assets/img/2019-7.jpg' | relative_url }}"
+  src="{{ 'assets/img/2019-workshops-7.jpg' | relative_url }}"
   >
 </div>
 
@@ -126,7 +126,7 @@ title: January - February 2019
   <img
   alt="TODO"
   class="pure-u-1"
-  src="{{ 'assets/img/2019-8.jpg' | relative_url }}"
+  src="{{ 'assets/img/2019-workshops-8.jpg' | relative_url }}"
   >
 </div>
 
@@ -136,7 +136,7 @@ title: January - February 2019
   <img
   alt="TODO"
   class="pure-u-1"
-  src="{{ 'assets/img/2019-9.jpg' | relative_url }}"
+  src="{{ 'assets/img/2019-workshops-9.jpg' | relative_url }}"
   >
 </div>
 
@@ -148,7 +148,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-10.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-10.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -158,7 +158,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-11.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-11.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -168,7 +168,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-12.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-12.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -178,7 +178,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-13.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-13.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -196,7 +196,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-14.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-14.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -205,7 +205,7 @@ title: January - February 2019
       <img
       alt="TODO"
       class="pure-u-1"
-      src="{{ 'assets/img/2019-15.jpg' | relative_url }}"
+      src="{{ 'assets/img/2019-workshops-15.jpg' | relative_url }}"
       >
     </div>
   </div>
@@ -217,7 +217,7 @@ title: January - February 2019
   <img
   alt="TODO"
   class="pure-u-1"
-  src="{{ 'assets/img/2019-16.jpg' | relative_url }}"
+  src="{{ 'assets/img/2019-workshops-16.jpg' | relative_url }}"
   >
 </div>
 
@@ -227,6 +227,6 @@ title: January - February 2019
   <img
   alt="TODO"
   class="pure-u-1"
-  src="{{ 'assets/img/2019-17.jpg' | relative_url }}"
+  src="{{ 'assets/img/2019-workshops-17.jpg' | relative_url }}"
   >
 </div>
