--- a/_pages/projects/2019-workshops.html
+++ b/_pages/projects/2019-workshops.html
@@ -4,30 +4,30 @@ layout: page
 title: The 2019 Workshops
 ---
 
-<p>In 2019 our Sri Lanka adventure keeps on going! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
+<p>In 2019 our Sri Lanka adventure returned! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
 
-<p>The course in Senkadagala School of Deaf and Blind, included 40 lessons hours and aimed to teach the basis techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective is to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people have not equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills together with encouraging self-expression can give a very positive strike to push the pupils towards their future.</p>
+<p>The course in Senkadagala School, included 40 lessons hours and aimed to teach the basic techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective was to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people do not have equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills, together with encouraging self-expression can give the pupils a very strong push towards future possibilities otherwise not available.</p>
 
-<p>In particular the course covers the following subjects:</p>
+<p>In particular the course covered the following subjects:</p>
 <ul>
   <li><em>Photography</em>: digital camera and basic techniques such as composition and lighting; Rule of thirds, perspective and colouring. Practical exercises on portrait, people, landscapes and still life.</li>
   <li><em>Movie making</em>: creative writing and concept for a short movie, making the storyboard. Roles in the industry: movie director, cameraman, set designer, light technician, fashion and make up artist. Practical exercises: making and editing a 5 minutes short movie.</li>
   <li><em>Stop motion animation</em>: using photography, plasticine and 3D cut out paper.</li>
   <li><em>Video editing</em>: colour composition, editing, green screen, <a href="https://www.openshot.org">OpenShot</a> software.</li>
-  <li><em>Working in the industry</em>: how to approach creative market; a 10-hour master class led by Sri Lankan professional animator and designer Niroshan Bandara.</li>
+  <li><em>Working in the industry</em>: how to approach the creative market; a 10-hour master class led by a very talented Sri Lankan professional animator and designer called Niroshan Bandara, who Is disabled, with no arms and operates his laptop using his toes.</li>
 </ul>
 
-<p>Moreover the workshop provided an opportunity to improve English practice, through writing and storytelling and learn transferrable skills such as working in a team, problem solving, collaborating and learning to communicate and compromise with a group in the creative field.</p>
+<p>Moreover, the workshop provided an opportunity to improve the children’s  English  through writing and storytelling, plus learn transferrable skills such as team working, problem solving, collaborating and learning how to communicate and compromise with a group in the creative field.</p>
 
 <p>We successfully made and edited two short movies along with stop motion animation workshop. According to Tharindu Vishvajith, the class prefect: “we gave a rich and useful insight on animation and movie making, which inspires us in continuing experimenting and working on our newly discovered passion.”</p>
 
-<p>This is possible thanks to the ten cameras donated to the school, together with the rest of equipment (including, tripods, studio spotlight, reflector and more) which have been funded by our Go-Fund-Me page led by our patron Nigel Bartram. Niroshan Bandara, is still collaborating with the school, by planning crossed lecture with the university where he is teaching.</p>
+<p>This was possible thanks to the ten cameras donated to the school, together with the rest of equipment (including, tripods, studio spotlight, reflector and more) which were funded by our Go-Fund-Me page led by our patron Nigel Bartram. Niroshan Bandara, is still collaborating with the school and planning crossed lecture with the university where he is teaching.</p>
 
 <h3>Senkadagala School of Deaf and Blind</h3>
 
-<p>This year, eighteen children aged 16-19, were selected by their schoolteachers among those who are interested in pursing studies on movie making, photography and animation. Differently from the previews years we opted for an intensive 40 hours class, as opposed to short workshops, to make sure we would follow the children one by one in their learning.</p>
+<p>This year, eighteen children aged 16-19, were selected by their schoolteachers as those most interested in pursing studies in movie making, photography and animation. In contrast to last year, we opted for an intensive 40 hours class, as opposed to short workshops, to make sure we would follow the children one by one in their learning.</p>
 
-<p>The week started with the Photography workshop. After letting the pupils experiment with the cameras, we delivered a two hours introduction, comprehensive of basic technicalities and history of photography, followed by practical exercises. During the course, that lasted three days, their improvement was substantial and their focus and interested kept them alert and sensitive to our suggestions and corrections.</p>
+<p>The week started with the Photography workshop. After letting the pupils experiment with the cameras, we delivered a two hour introduction to all basic techniques and history of photography, followed by practical exercises. During this three day course, their improvement was substantial; their focus and interest kept them alert and sensitive to our suggestions and corrections.</p>
 
 <div class="pure-g">
   <div class="pure-u-md-1-2">
@@ -53,7 +53,7 @@ title: The 2019 Workshops
 
 <p>The above example shows the progress made from the first experiments to the final exercise where students clearly understood concept of focus, lighting and composition.</p>
 
-<p>The following four days were dedicated to movie making. To explain tools and technicalities we revised with the kids what they learned in the photography workshop. The first day we explained the different roles one can take in the making of a movie. The second part of the workshop was dedicated to the reflecting on a movie concept and on the scripting of the scenes. The class was divided into groups, which were invited to present a short story to set the basis of our film. To help them structuring the plot we suggested the following seven steps procedure:</p>
+<p>The following four days were dedicated to movie making. To explain the tools and technicalities we revised with the kids what they learned in the photography workshop. The first day we explained the different roles one can take in the making of a movie. The second part of the workshop was dedicated to the reflecting on a movie concept and on the scripting of the scenes. The class was divided into groups, who were invited to present a short story to set the basis of our film. To help them structuring the plot we suggested the following seven step procedure:</p>
 
 <ol>
   <li>Think about a character…</li>
@@ -65,7 +65,7 @@ title: The 2019 Workshops
   <li>The consequence is not as expected!</li>
 </ol>
 
-<p>After an initial brainstorm, the children supported by their teacher and translator, proposed to present their ideas through drawings, as they felt more confident with visual storytelling than writing. We requested them to specify every possible details in the drawings which they did as you can observe in the four storyboards.</p>
+<p>After an initial brainstorm, the children supported by their teacher and translator, proposed to present their ideas through drawings, as they felt more confident with visual storytelling than writing. We requested them to specify every possible detail in the drawings which they did, as you can observe in the four storyboards.</p>
 
 <div class="pure-g">
   <div class="pure-u-md-1-2 light-vertical-margin">
@@ -110,7 +110,7 @@ title: The 2019 Workshops
   </div>
 </div>
 
-<p>One of the stories was voted democratically by the class to be made into a movie, and subsequently we started working on their roles. The class was divided in four groups: Directors / Cameraman, Actors, Set designers and Fashion designers. The groups worked collaboratively together and at the end of the three days workshop, we managed to record a seven minutes short film. The challenges we faced were mostly about communication, but the students’ imagination and brilliant problem solving allowed them to progress through the movie independently and without too much effort.</p>
+<p>The class chose which was to be made into a movie by democratic vote and subsequently we started working on their roles. The class was divided in four groups: Directors / Cameraman, Actors/???Set designers and Fashion designers. The groups worked collaboratively and at the end of the three day workshop, we managed to record a seven minute short film. The challenges we faced were mostly about communication, but the students’ imagination and brilliant problem solving allowed them to progress through the movie autonomously and without too much effort.</p>
 
 <div class="pure-u-1">
   <img
@@ -120,7 +120,7 @@ title: The 2019 Workshops
   >
 </div>
 
-<p>In order for them to get accustomed to the technical material, we decided to leave them four cameras to practice during their free tame at home or in their dormitories. Surprisingly the pupils were so dedicated that managed to make independently three short movies, which they then edited with OpenShot, the editing software we installed in their computers in school.</p>
+<p>In order for them to get accustomed to the technical material, we decided to leave four cameras for them to practice with during their free tame at home, or in their dormitories. Surprisingly the pupils were so dedicated that they managed to make three short movies on their own, which they then edited with OpenShot, the editing software we installed on their computers, in school.</p>
 
 <div class="pure-u-1">
   <img
@@ -130,7 +130,7 @@ title: The 2019 Workshops
   >
 </div>
 
-<p>Finally, the last week was dedicated to animation workshop. Niroshan gave them practical example using plasticine along with theoretical lessons through projected slides. The animation workshop consisted in a first stop motion experiment, using photographs of the children moving through space, as showed on the picture below.</p>
+<p>Finally, the last week was dedicated to an animation workshop. Niroshan gave them a practical example using plasticine, along with theoretical lessons using projected slides. The animation workshop consisted of a first stop motion experiment, using photographs of the children moving through space, as shown on the picture below.</p>
 
 <div class="pure-u-1">
   <img
@@ -184,11 +184,11 @@ title: The 2019 Workshops
   </div>
 </div>
 
-<p>Unfortunately the last days we had to rush through, as we didn’t have much time left. However the outcome was successful and the kids were very pleased and excited about their work. During our goodbye ceremony they expressed all their gratitude to the teachers through a presentation and an announcement in front of the school staff, students and the school principal.</p>
+<p>Unfortunately, we had to rush through the last days, as we didn’t have much time left. However, the outcome was successful and the kids were very pleased and excited about their work. During our goodbye ceremony, they expressed their great gratitude to the teachers (you the teachers of their regular ones – it’s not clear) by means of a presentation and an announcement in front of the school staff, students and the school principal.</p>
 
 <h3>Evelyn Nurseries.</h3>
 
-<p>Our second workshop took place in Evelyn nurseries, to a class of eight girls from 15 to 18 years old. Being the first time in the children home, we had to adjust to the schedule, habits and expectation of the students who were curious about the course but less interested in the development of the subject for their future career. Nevertheless, going forward with the classes the students demonstrated intuition and skills, and their communication and participation helped us shape our workshop on their need and interest. We began with the photography workshop which lasted about three hours. The following pictures show their progress during the classes</p>
+<p>Our second workshop took place in Evelyn nurseries, to a class of eight girls from 15 to 18 years old. Being the first time in the childrens’ home, we had to adjust to the schedule, habits and expectation of the students who were curious about the course but less interested in the development of the subject for their future career. Nevertheless, going forward with the classes the students demonstrated intuitive abilities. Their communication and participation helped us shape our workshop for  their specific needs and interests. We began with the photography workshop which lasted about three hours. The following pictures show their progress during the classes</p>
 
 <div class="pure-g">
   <div class="pure-u-md-1-2">
@@ -211,7 +211,7 @@ title: The 2019 Workshops
   </div>
 </div>
 
-<p>Having more time to develop the movie, as the animation course was only planned with Niroshan in Senkadagala, we could invest more time and energies in the making of the movie. Firstly, based on the same presentation we gave to Senkadagala students, we asked the girls to write their own short stories. This time they didn’t divide in groups and each of them wrote and produces their plot. At the end of the two hours the story that had the most votes was choose to be made into our project. The class was again split in different groups but this time all of them ad an opportunity to show their acting skills.</p>
+<p>Having more time to develop the movie, as the animation course was only planned with Niroshan in Senkadagala, we could invest more time and energies in the making of the movie. Firstly, based on the same presentation as we gave to the Senkadagala students, we asked the girls to write their own short stories. This time they didn’t divide into groups,  rather, each of them wrote and produced their plot. At the end of the two hours the story that got the most votes was choosen to be made into our project. The class was again split into  groups but this time all of them had an opportunity to show their acting skills.</p>
 
 <div class="pure-u-1">
   <img
