move image in 2019-workshops

--- a/_pages/projects/2019-workshops.html
+++ b/_pages/projects/2019-workshops.html
@@ -4,6 +4,14 @@ layout: page
 title: The 2019 Workshops
 ---
 
+<div class="pure-u-1 medium-top-margin">
+  <img
+  alt="TODO"
+  class="pure-u-1"
+  src="{{ 'assets/img/2019-workshops-17.jpg' | relative_url }}"
+  >
+</div>
+
 <p>In 2019 our Sri Lanka adventure returned! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
 
 <p>The course in Senkadagala School, included 40 lessons hours and aimed to teach the basic techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective was to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people do not have equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills, together with encouraging self-expression can give the pupils a very strong push towards future possibilities otherwise not available.</p>
@@ -222,11 +230,3 @@ title: The 2019 Workshops
 </div>
 
 <p>Throughout the two weeks a short movie was successfully filmed and edited with the help of the girls. This time, not having a computer we had to work on the editing by ourselves but some of the students, who were interested in the process, had a small class on IMovie editing software. Being guests in the Evelyn nurseries children home we had the opportunity to know them personally and exchange also beautiful moments, cooking together and talking about each other’s cultures. Interestingly the girls had made thoughtful and intricate stories based on their personal experiences, and enjoyed the writing classes a lot.</p>
-
-<div class="pure-u-1">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-workshops-17.jpg' | relative_url }}"
-  >
-</div>
