content update 2019-workshops

--- a/_pages/projects/2019-workshops.html
+++ b/_pages/projects/2019-workshops.html
@@ -4,15 +4,11 @@ layout: page
 title: The 2019 Workshops
 ---
 
-<div class="pure-u-1 medium-top-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-workshops-17.jpg' | relative_url }}"
-  >
-</div>
+<h1>Workshops February 2019</h1>
 
 <p>In 2019 our Sri Lanka adventure returned! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
+
+<img class="pure-u-1 pure-u-sm-1-2 float-left medium-right-margin" alt="TODO" src="{{ 'assets/img/2019-workshops-0.jpg' | relative_url }}">
 
 <p>The course in Senkadagala School, included 40 lessons hours and aimed to teach the basic techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective was to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people do not have equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills, together with encouraging self-expression can give the pupils a very strong push towards future possibilities otherwise not available.</p>
 
