--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -46,6 +46,19 @@ title: Who We Are
   src="{{ 'assets/img/who-we-are-nigel-bartam.jpg' | relative_url }}">
 </div>
 
+<h2 class="dark-gray font-weight-normal">Giulia Lamorgese</h2>
+
+<div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
+  <p class="no-margin">Giulia Lamorgese was born and studied in Rome. After finishing high school in Rome she left the country, to go to Australia where she studied English and actively partecipate to WWOOfing projects. Her passion for traveling and humanitarian projects started at age 15, while being part of an exchange project with an indian family. Since that age she started reporting, writing and taking photos.During her final year in High School She produced, together with Olga Hendel, a short movie regarding the birth of the EU that participated in a European-wide contest, and was selected amongst the winners for a trip to the EU Parliament in Strasbourg. After having lived one year in Australia she moved to Bologna, where she graduated in Modern Literature in 2016 with a research thesis, conduced in cooperation with the newspaper "La Repubblica" on current journalism ethics. She's currently studiyng comparative english and spanish literatures at the University of Turin for her master's degree. In 2018 she participated in a photography course at the Turin Photography Academy. In 2017 followed a photojournalism workshop at The Post Internazionale. She's currently a tales and reportages writer for Neutipia.</p>
+</div>
+
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Giulia Lamorgese"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/who-we-are-giulia-lamorgese.jpg' | relative_url }}">
+</div>
+
 <h2 class="uppercase no-top-margin light-gray font-weight-normal">2D Animation Tutor</h2>
 
 <h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
