--- a/_pages/index.html
+++ b/_pages/index.html
@@ -33,10 +33,10 @@ layout: default
     <div class="light-padding">
       <p class="light-padding light-border-radius light-gray-bg">News & Activities</p>
 
-      <p>This year, we will  be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a  much better place in the community, economically and socially, when they finish their studies</p>
+      <p>This year, we have been running three courses, Photography, Movie Making and Animation. The three main courses are aimed at giving students some work-related skills which will help them in find a much better place in the community, economically and socially, when they finish their studies</p>
 
       <div class="youtube">
-        <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/FwN1kdESEic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
