--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,7 +11,7 @@ title: About
   <div class="pure-g">
     <div class="pure-u-3-4 auto-margin">
       <div class="youtube">
-        <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/FwN1kdESEic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
