--- a/_pages/index.html
+++ b/_pages/index.html
@@ -33,7 +33,8 @@ layout: default
     <div class="light-padding">
       <p class="light-padding light-border-radius light-gray-bg">News & Activities</p>
 
-      <p>This year, we have been running three courses, Photography, Movie Making and Animation. The three main courses are aimed at giving students some work-related skills which will help them in find a much better place in the community, economically and socially, when they finish their studies</p>
+      <p>This year, we have been running three courses, Photography, Movie Making and Animation. The three main courses are aimed at giving students some work-related skills which will help them in find a much better place in the community, economically and socially, when they finish their studies.</p>
+      <p>You can download our 2019 workshop report <a href="{{ 'assets/pdf/report-2019.pdf' | relative_url }}" target="_blank">here</a>.</p>
 
       <div class="youtube">
         <iframe src="https://www.youtube.com/embed/FwN1kdESEic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -45,9 +46,11 @@ layout: default
     <div class="light-padding">
     <p class="light-padding light-border-radius light-gray-bg">Donate</p>
 
-    <p>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need your help.</p>
+    <p>Hear We Art is totally dependent on donations.</p>
 
-    <p>Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
+    <p>Thanks to your support we are able to purchase computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
+
+    <p>If you want to help contact us at <a href="mailto:info@hearweart.org">info@hearweart.org</a>.</p>
     </div>
   </div>
 </div>
