--- a/_pages/projects/2017-pilot-program.html
+++ b/_pages/projects/2017-pilot-program.html
@@ -7,6 +7,14 @@ title: The 2017 Pilot Program
 <div class="content-container">
   <h1>2017 Pilot Program</h1>
 
+  <div class="pure-g">
+    <div class="pure-u-3-4 auto-margin">
+      <div class="youtube">
+        <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
   <p>With the support and help of Nigel, in 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of Senkadagala School. Discussions quickly led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan,) which successfully piloted the first Hear We Art series of workshops.</p>
 
   <img
