--- a/_pages/projects/2019-workshops.html
+++ b/_pages/projects/2019-workshops.html
@@ -14,6 +14,8 @@ title: The 2019 Workshops
   src="{{ 'assets/img/2019-workshops-0.jpg' | relative_url }}"
 >
 
+<p>You can download our 2019 workshop report <a href="{{ 'assets/pdf/report-2019.pdf' | relative_url }}" target="_blank">here</a>.</p>
+
 <p>The course in Senkadagala School, included 40 lessons hours and aimed to teach the basic techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective was to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people do not have equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills, together with encouraging self-expression can give the pupils a very strong push towards future possibilities otherwise not available.</p>
 
 <p>In particular the course covered the following subjects:</p>
@@ -38,24 +40,12 @@ title: The 2019 Workshops
 <p>The week started with the Photography workshop. After letting the pupils experiment with the cameras, we delivered a two hour introduction to all basic techniques and history of photography, followed by practical exercises. During this three day course, their improvement was substantial; their focus and interest kept them alert and sensitive to our suggestions and corrections.</p>
 
 <div class="pure-g">
-  <div class="pure-u-md-1-2">
-    <div class="pure-u-md-23-24 float-left-md">
-      <img
-      alt="TODO"
-      class="pure-u-1"
-      src="{{ 'assets/img/2019-workshops-1.jpg' | relative_url }}"
-      >
-    </div>
-  </div>
-
-  <div class="pure-u-md-1-2">
-    <div class="pure-u-md-23-24 float-right-md">
-      <img
+  <div class="pure-u-md-1">
+    <img
       alt="TODO"
       class="pure-u-1"
       src="{{ 'assets/img/2019-workshops-2.jpg' | relative_url }}"
-      >
-    </div>
+    >
   </div>
 </div>
 
@@ -76,27 +66,6 @@ title: The 2019 Workshops
 <p>After an initial brainstorm, the children supported by their teacher and translator, proposed to present their ideas through drawings, as they felt more confident with visual storytelling than writing. We requested them to specify every possible detail in the drawings which they did, as you can observe in the four storyboards.</p>
 
 <div class="pure-g">
-  <div class="pure-u-md-1-2 light-vertical-margin">
-    <div class="pure-u-md-23-24 float-left-md">
-      <img
-      alt="TODO"
-      class="pure-u-1"
-      src="{{ 'assets/img/2019-workshops-3.jpg' | relative_url }}"
-      >
-    </div>
-  </div>
-
-  <div class="pure-u-md-1-2 light-vertical-margin">
-    <div class="pure-u-md-23-24 float-right-md">
-      <img
-      alt="TODO"
-      class="pure-u-1"
-      src="{{ 'assets/img/2019-workshops-4.jpg' | relative_url }}"
-      >
-    </div>
-  </div>
-
-
   <div class="pure-u-md-1-2 light-vertical-margin">
     <div class="pure-u-md-23-24 float-left-md">
       <img
