--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -27,6 +27,8 @@ title: Who We Are
   src="{{ 'assets/img/who-we-are-olga-hendel.jpg' | relative_url }}">
 </div>
 
+<h2 class="uppercase light-gray font-weight-normal">Patron and co-founder</h2>
+
 <h2 class="dark-gray font-weight-normal">Nigel Bartam</h2>
 
 <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
@@ -45,6 +47,8 @@ title: Who We Are
   class="who-we-are-pic"
   src="{{ 'assets/img/who-we-are-nigel-bartam.jpg' | relative_url }}">
 </div>
+
+<h2 class="uppercase light-gray font-weight-normal">Photography tutor</h2>
 
 <h2 class="dark-gray font-weight-normal">Giulia Lamorgese</h2>
 
