--- a/_pages/projects/2018-workshops.html
+++ b/_pages/projects/2018-workshops.html
@@ -8,7 +8,7 @@ title: The 2018 Workshops
 
 <p>This year, we will be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a much better place in the community, economically and socially, when they finish their studies:</p>
 
-<img class="pure-u-1 pure-u-sm-1-2 float-left medium-right-margin" alt="TODO" src="{{ 'assets/img/2018-workshops-1.jpg' | relative_url }}">
+<img class="pure-u-1 pure-u-sm-1-2 float-left medium-right-margin" src="{{ 'assets/img/2018-workshops-1.jpg' | relative_url }}">
 
 
 <ul>
@@ -21,7 +21,7 @@ title: The 2018 Workshops
 
 <p>In addition to the above, the children will create a special <strong>tactile mural</strong> for the school. This will be done using specially selected materials to facilitate the full participation of visually-impaired students, allowing them the opportunity to express their creativity, whilst developing their dexterity.</p>
 
-<img class="pure-u-1 pure-u-sm-1-2 float-right medium-left-margin" alt="TODO" src="{{ 'assets/img/2018-workshops-2.jpg' | relative_url }}">
+<img class="pure-u-1 pure-u-sm-1-2 float-right medium-left-margin" src="{{ 'assets/img/2018-workshops-2.jpg' | relative_url }}">
 
 <p>This year, as alluded to already, we’ve decided to involve local experts in our workshops. This will permit teachers, none of whom currently have any professional expertise, to radically up skill with the aim of them being able to manage similar classes and workshops without any external support. The integration of local experts will also create tangible links between the school and the community, fostering the possibility of integrating deaf and blind children in the productive world, when they leave school.</p>
 
@@ -33,6 +33,6 @@ title: The 2018 Workshops
 
 <p>Last year we focused on developing specific tools and techniques, such as the visual grid, which we created in order to teach to our visually impaired students how graphic patterns work.</p>
 
-<img class="pure-u-1 pure-u-sm-1-2 float-left medium-right-margin" alt="TODO" src="{{ 'assets/img/2018-workshops-3.jpg' | relative_url }}">
+<img class="pure-u-1 pure-u-sm-1-2 float-left medium-right-margin" src="{{ 'assets/img/2018-workshops-3.jpg' | relative_url }}">
 
 <p>Building on the success of last year’s graphic design workshops, in 2018, we’ll be focused on teaching our blind students more graphic rudiments, using a method which unites the perception of rhythm and visual patterns. We’ll be teaching new techniques to help our hearing-impaired students learn GIMP. In this way, they’ll be able to gain precious work place related skills and thus  avoid the isolation that many disabled people experience in the rural economies in Sri Lanka.</p>
